pulsecore: Fix incorrect architecture mapping on sparc64.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=95432

Signed-off-by: John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>
Signed-off-by: Arun Raghavan <arun@arunraghavan.net>